kustomized-cache/commit-d86ebb0/staging/components/sprayproxy/staging/kustomize.out.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    openshift.io/cluster-monitoring: "true"
  name: sprayproxy
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sprayproxy
  namespace: sprayproxy
---
apiVersion: v1
kind: Service
metadata:
  name: sprayproxy-metrics-service
  namespace: sprayproxy
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: sprayproxy
---
apiVersion: v1
kind: Service
metadata:
  name: sprayproxy-service
  namespace: sprayproxy
spec:
  ports:
  - name: server
    port: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: sprayproxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sprayproxy
  name: sprayproxy
  namespace: sprayproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sprayproxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sprayproxy
    spec:
      containers:
      - args:
        - server
        env:
        - name: SPRAYPROXY_SERVER_BACKEND
          value: |
            https://pipelines-as-code-controller-pipelines-as-code.apps.stone-stg-m01.7ayg.p1.openshiftapps.com https://pipelines-as-code-controller-pipelines-as-code.apps.stone-stg-rh01.l2vh.p1.openshiftapps.com
        - name: GH_APP_WEBHOOK_SECRET
          valueFrom:
            secretKeyRef:
              key: webhook.secret
              name: pipelines-as-code-secret
        image: quay.io/redhat-appstudio/sprayproxy:e7703f63751ee924dcbfcd081e3bc90d4d284961
        name: sprayproxy
        ports:
        - containerPort: 8080
          name: server
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:6000/
        - --logtostderr=true
        - --v=0
        image: registry.redhat.io/openshift4/ose-kube-rbac-proxy:v4.12
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
      serviceAccountName: sprayproxy
---
apiVersion: external-secrets.io/v1beta1
kind: ExternalSecret
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "-1"
  name: pipelines-as-code-secret
spec:
  dataFrom:
  - extract:
      key: staging/pipeline-service/github-app
  refreshInterval: 1h
  secretStoreRef:
    kind: ClusterSecretStore
    name: appsre-stonesoup-vault
  target:
    creationPolicy: Owner
    deletionPolicy: Delete
    name: pipelines-as-code-secret
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=63072000
  name: sprayproxy-route
  namespace: sprayproxy
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sprayproxy-service
